# many_faces_ai

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_INTEGRATION.md  AI_LEARNING.md  CHANGELOG.md  Dockerfile.dev  Dockerfile.host-init  README.md  README_HUSKY.md  README_PRE_COMMIT.md  bootstrap.py  clear-dev.sh  conftest.py  generate_proto.sh  lint.sh  live_stats_planner.py  live_stats_stitch.py  moderation_input_sanitize.py  pyproject.toml  pytest.ini  rebuild-dev.sh  requirements.txt  server.py  start-dev.sh  stop-dev.sh  test_ai_model_service.py  test_moderation_input_sanitize.py  test_server.py  verify-ci.sh
docs/: SECURITY.md  capability-roadmap-v0.9.0.md  embeddings.md  grpc-search-worker.md  host-profile.md  moderation-llm-phase3.md  moderation-media-pass.md  mtls.md  operator-live-stats-map-reduce.md  search-integration.md
handlers/: __init__.py  rpc_handlers.py
proto/: __init__.py  health.proto
scripts/: clear-dev.sh  collect-host-profile.ps1  collect_host_snapshot.py  collect_host_snapshot.sh  collect_windows_host_profile.ps1  ensure_host_profile_agent.sh  entrypoint.sh  format.sh  generate_proto.sh  host_profile_agent.py  lint.sh  pull_helper_model.py  pull_models.py  rebuild-dev.sh  refresh_host_snapshot.py  run_host_profile_init.py  smoke-grpc-tls.sh  start-ai-docker.ps1  start-ai-docker.sh  start-dev.sh  stop-dev.sh  verify-ci.sh
services/: __init__.py  ai_model_service.py  chat_risk_scorer.py  content_review_classifier.py  embed_text.py  explain_decision.py  face_context_snapshot.py  (+10 more)
(+44 files in other folders)
