[project]
name = "many_faces_ai"
version = "0.8.1"
description = "Local AI gRPC adapter for the Many Faces platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ladislav Kostolny", email = "01laky@gmail.com" }]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"server.py" = ["I001"]  # late imports after sys.path / proto bootstrap

[tool.ruff.lint.isort]
known-first-party = ["proto", "services", "utils", "bootstrap", "moderation_input_sanitize"]
